<resources>
<<<<<<< HEAD
<string name="app_name">イベントとリスナサンプル</string>
    <string name="tv_name">お名前を入力してください。</string>
    <string name="bt_click">表示</string>
    <string name="bt_clear">クリア</string>
</resources>
=======
    <string name="app_name">画面部品サンプル</string>
    <string name="tv_msg">お名前を入力してください。</string>
    <string name="bt_save">保存</string>
    <string name="cb_drink">ドリンク</string>
    <string name="cb_food">フード</string>
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>
    <string-array name="sp_currylist">
      <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマンカレー</item>
        <item>グリーンカレー</item>
    </string-array>

<string-array name="lv_cooktaillist">
    <item>ホワイトレディー</item>
    <item>バラライカ</item>
    <item>XYZ</item>
    <item>ニューヨーク</item>
    <item>マンハッタン</item>
    <item>ミシシッピミュール</item>
    <item>ブルーハワイ</item>
    <item>マイタイ</item>
    <item>マティーニ</item>
    <item>ブルームーン</item>
    <item>モヒート</item>
</string-array>
</resources>

>>>>>>> 469bbaaab4176ace17ad55776cc2dbb8032d29c5
